prakticka, grafy, uvod

--- a/latex/components/citace.tex
+++ b/latex/components/citace.tex
@@ -26,4 +26,7 @@
     \bibitem{moneta}
     \textit{Slovník pojmů z finančnictví a bankovnictví}. Online. MONETA Money Bank. Dostupné z: https://www.moneta.cz/slovnik-pojmu.
 
+    \bibitem{chmu}
+    \textit{ČHMÚ}. Online. Dostupné z: \url{https://www.chmi.cz/}.
+
 \end{thebibliography}
