--- a/latex/components/titlepage.tex
+++ b/latex/components/titlepage.tex
@@ -3,17 +3,17 @@
         \Huge
 
         % \textbf{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}
-        \textbf{\textsf{\textls*[-25]{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}}}
+        \textbf{\textsf{\textls*[-50]{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}}}
             
         \vspace{1cm}
         \LARGE
-        \textbf{\textsf{Přírodovědecká fakulta}}
+        \textbf{\textsf{\textls*[-25]{Přírodovědecká fakulta}}}
         
         \vspace{2cm}
         \includegraphics[width=0.5\textwidth]{static/PřF-UJEP-logo.png}
         \vspace{3cm}
             
-        \textbf{\textsf{\textls*[-25]{Optimalizace investičních prostředků \\z hlediska výnosu fotovoltaických elektráren}}}
+        \textbf{\textsf{\textls*[-50]{Optimalizace investičních prostředků \\z hlediska výnosu fotovoltaických elektráren}}}
         
         \vspace{1cm}
 
