--- a/latex/components/citace.tex
+++ b/latex/components/citace.tex
@@ -29,4 +29,7 @@
     \bibitem{chmu}
     \textit{ČHMÚ}. Online. Dostupné z: \url{https://www.chmi.cz/}.
 
+    \bibitem{energy-profile}
+    MIHAILOV, Nikolay; EVSTATIEV, Boris; KADIROVA, Seher; GUEORGUIEV, Tzvetelin; GEORGIEVA, Tsvetelina; EVTIMOV, Aleksandar. \textit{Load Profile of Typical Residential Buildings in Bulgaria}. IOP Conference Series: Earth and Environmental Science. 172. 012035. 2018. DOI: 10.1088/1755-1315/172/1/012035.
+
 \end{thebibliography}
